--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 <body>
 
 <div class="container">
-  <h1 class="jumbotron bg-primary">Image Classfication</h1>
+  <h1 class="jumbotron bg-primary">Image Classfication RPS</h1>
   <br><br>
   <form class="form-horizontal" action="/submit" method="post" enctype="multipart/form-data">
 
@@ -32,8 +32,10 @@
 
 	{% if prediction %}
   <img src="{{img_path}}" height="400px" width="400px">
-	<h2> Your Prediction   : <i> {{prediction}} </i></h2>
-
+	<h2> Prediction   : <i> {{prediction}} </i></h2>
+  <h2>Accuracy: <i>{{ accuracy }}</i></h2>
+  <h2>Prediction Time:<i> {{ prediction_time }} seconds</i></h2>
+ 
 	{% endif %}
 
 </div>
